Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25341

[crash] creating an alias to a property causes crash when loading the QML file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 4.8.x
    • 4.8.0
    • None
    • Windows 7, MacOS X Lion
    • a3a7553dd52a90a95cfeef80d36b1fd671b335b2 (4.8)

      g++ -o test main.cpp -I/opt/local/include/ -lQtGui -lQtCore -lQtDeclarative -L/opt/local/lib/

      ---- main.cpp:
      #include <QtGui/QApplication>
      #include <QtDeclarative/QDeclarativeView>

      int main(int argc, char *argv[])
      {
      QApplication app(argc, argv);

      QDeclarativeView v;
      QDeclarativeContext *c = v.rootContext();

      v.setSource(QUrl::fromLocalFile("main.qml"));
      v.show();

      return app.exec();
      }

      ---- main.qml:
      import QtQuick 1.0

      Rectangle {
      width: 100; height: 100
      color: "blue"

      Text {
      id: myText
      text: "text"
      property variant l1: Text

      { text: "variant text" }

      }

      MouseArea

      { anchors.fill: parent onClicked: myText.text = "more text" property alias foo: myText.l1.text }

      }

      The crash (same crash, reproduced on linux):
      (gdb) bt
      #0 0x01fb79ba in QDeclarativeCompiler::compileAlias ()
      #1 0x01fbc408 in QDeclarativeCompiler::buildDynamicMeta ()
      #2 0x01fbdda2 in QDeclarativeCompiler::completeComponentBuild ()
      #3 0x01fcaf33 in QDeclarativeCompiler::compileTree ()
      #4 0x01fccbba in QDeclarativeCompiler::compile ()
      #5 0x01fe934a in QDeclarativeTypeData::compile ()
      #6 0x01fea00d in QDeclarativeTypeData::done ()
      #7 0x01fe49b7 in QDeclarativeDataBlob::tryDone ()
      #8 0x01fe6325 in QDeclarativeDataLoader::load ()
      #9 0x01fe685b in QDeclarativeTypeLoader::get ()
      #10 0x01fa3f25 in QDeclarativeComponent::loadUrl ()
      #11 0x01fa4795 in QDeclarativeComponent::QDeclarativeComponent ()
      ...

      this is a (somewhat less helpful) output from VisualStudio 2010:

      QtDeclaratived4.dll!5ab1f2bf()
      [Frames below may be incorrect and/or missing, no symbols loaded for QtDeclaratived4.dll]
      QtCored4.dll!5b2dd5ad()
      vld_x86.dll!0321d845()
      vld_x86.dll!0320b791()
      > msvcr100d.dll!_unlock(int locknum) Line 375 C
      msvcr100d.dll!_heap_alloc_dbg_impl(unsigned int nSize, int nBlockUse, const char * szFileName, int nLine, int * errno_tmp) Line 507 + 0x7 bytes C++
      msvcr100d.dll!_heap_alloc_dbg_impl(unsigned int nSize, int nBlockUse, const char * szFileName, int nLine, int * errno_tmp) Line 504 + 0xc bytes C++
      msvcr100d.dll!_nh_malloc_dbg_impl(unsigned int nSize, int nhFlag, int nBlockUse, const char * szFileName, int nLine, int * errno_tmp) Line 239 + 0x19 bytes C++
      msvcr100d.dll!_nh_malloc_dbg(unsigned int nSize, int nhFlag, int nBlockUse, const char * szFileName, int nLine) Line 302 + 0x1d bytes C++
      msvcr100d.dll!malloc(unsigned int nSize) Line 56 + 0x15 bytes C++
      msvcr100d.dll!operator new(unsigned int size) Line 59 + 0x9 bytes C++
      0879ef6c()
      vld_x86.dll!0321d845()
      vld_x86.dll!0321a948()
      msvcr100d.dll!_free_base(void * pBlock) Line 50 + 0x13 bytes C
      0879f058()
      QtDeclaratived4.dll!5a99b4a2()
      QtDeclaratived4.dll!5a9d6d02()
      QtDeclaratived4.dll!5ab10ff6()
      QtDeclaratived4.dll!5ab0ef84()
      QtDeclaratived4.dll!5ab54eb1()
      QtDeclaratived4.dll!5ab5422b()
      QtDeclaratived4.dll!5ab51b6a()
      QtDeclaratived4.dll!5ab5271f()
      QtDeclaratived4.dll!5ab52172()
      QtDeclaratived4.dll!5ab52a3f()
      QtDeclaratived4.dll!5ac92489()
      QtDeclaratived4.dll!5aaf6f60()
      QtDeclaratived4.dll!5aaf69ba()

        For Gerrit Dashboard: QTBUG-25341
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            fuzzypixel Dmitri Trembovetski
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes