Fix crash when using aliases and variants

Right now, the parser crash when using id.variant.property for an alias.
The current patch fix the crash, and it displays an error message in
the console now (like QtQuick 2).

Task-number: QTBUG-25341
Change-Id: I5e2c13f487655fd2b90129c5693f5daf3f77984b
Reviewed-by: Matthew Vogt <matthew.vogt@nokia.com>