tests/auto/declarative/qdeclarativelanguage/data/invalidAlias.11.qml
@@ -1,0 +1,9 @@
+import QtQuick 1.0
+
+QtObject {
+    id: main
+    property variant v: Text{
+        text: "variant text"
+    }
+    property alias foo: main.v.text
+}
